--- a/proyecto/frontend/src/app/login/login.component.html
+++ b/proyecto/frontend/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<button mat-stroked-button>CREAR CUENTA</button>
+<button mat-stroked-button (click)="onClickSign()">CREAR CUENTA</button>
 <h1>Login</h1>
 <form class="example-form" (ngSubmit)="onClickLogin()">
   <mat-form-field class="example-full-width">
