[ADD] menu admin

--- a/proyecto/frontend/src/app/tienda-admin/tienda-admin.component.html
+++ b/proyecto/frontend/src/app/tienda-admin/tienda-admin.component.html
@@ -13,6 +13,8 @@
       <p>
         Fabricante: {{ producto.fabricante }}<br>
         Precio: {{ producto.precio_actual }}<br>
+        Código bodega: {{producto.codigo_bodega}}<br>
+        Código cuarto frío: {{producto.codigo_cuarto_frio}}<br>
       </p>
     </mat-card-content>
     <mat-card-actions>
