--- a/proyecto/frontend/src/app/producto-admin/producto-admin.component.html
+++ b/proyecto/frontend/src/app/producto-admin/producto-admin.component.html
@@ -3,10 +3,14 @@
   <h2>{{ datosProducto.get('codigo').value }}</h2>
 </div>
 
+<div *ngIf="operacion == 'crear'">
+  <h1>Nuevo producto</h1>
+</div>
+
 <form class="container" (ngSubmit)="onSubmit()" [formGroup]="datosProducto">
-  <mat-form-field *ngIf="operacion == 'crear'">
-    <input matInput formControlName="codigo" placeholder="Codigo producto">
-    <mat-error *ngIf="datosProducto.get('codigo').hasError('required')">
+  <mat-form-field>
+    <input matInput formControlName="imagen" placeholder="Imagen">
+    <mat-error *ngIf="datosProducto.get('imagen').hasError('required')">
       Campo es <strong>requerido</strong>
     </mat-error>
   </mat-form-field>
@@ -29,16 +33,26 @@
     </mat-error>
   </mat-form-field>
   <mat-form-field>
-    <input matInput formControlName="precio" placeholder="Precio">
-    <mat-error *ngIf="datosProducto.get('precio').hasError('required')">
+    <input matInput formControlName="precio_actual" placeholder="Precio">
+    <mat-error *ngIf="datosProducto.get('precio_actual').hasError('required')">
       Campo es <strong>requerido</strong>
     </mat-error>
   </mat-form-field>
   <mat-form-field>
-    <input matInput formControlName="bodega" placeholder="Bodega">
-    <mat-error *ngIf="datosProducto.get('bodega').hasError('required')">
-      Campo es <strong>requerido</strong>
-    </mat-error>
+    <mat-label>Código Bodega</mat-label>
+    <mat-select formControlName="codigo_bodega" name="food">
+      <mat-option *ngFor="let bodega of bodegas" [value]="bodega.codigo">
+        {{bodega.codigo}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Código Cuarto frio</mat-label>
+    <mat-select formControlName="codigo_cuarto_frio" name="food">
+      <mat-option *ngFor="let cuarto of bodegaActual()" [value]="cuarto.codigo_cuarto_frio">
+        {{cuarto.codigo_cuarto_frio}}
+      </mat-option>
+    </mat-select>
   </mat-form-field>
   <button mat-stroked-button type="submit" [disabled]="datosProducto.invalid">{{operacion.toUpperCase()}}</button>
 </form>
