--- a/proyecto/frontend/src/app/pedidos/pedidos.component.scss
+++ b/proyecto/frontend/src/app/pedidos/pedidos.component.scss
@@ -5,3 +5,15 @@
 .card-item {
   max-width: 500px;
 }
+
+.example-card {
+  max-width: 200px;
+  margin: 10px;
+}
+
+.center-content {
+  display: flex;
+  flex-direction: row;
+  margin: 10px;
+  padding: 10px;
+}
